[gd_scene load_steps=7 format=4 uid="uid://b0b7kq30dqwbh"]

[ext_resource type="Script" uid="uid://d4c6n7mcli676" path="res://scene/Environment/BossDoor/boss_door.gd" id="1_4pqwy"]
[ext_resource type="Texture2D" uid="uid://lsu5yiluu1rt" path="res://assets/mapTile/TileMapMau001.png" id="2_r5b3b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtf2v"]
size = Vector2(32, 64.5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yqhpq"]
texture = ExtResource("2_r5b3b")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:8/0 = 0
1:8/0 = 0
0:9/0 = 0
1:9/0 = 0

[sub_resource type="TileSet" id="TileSet_4gpym"]
sources/0 = SubResource("TileSetAtlasSource_yqhpq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4pqwy"]
size = Vector2(32, 20.2148)

[node name="BossDoor" type="Node2D"]
position = Vector2(10, 0)
script = ExtResource("1_4pqwy")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -31.75)
shape = SubResource("RectangleShape2D_wtf2v")

[node name="TileMapLayer1" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD///3/AAACAAEAAAD///7/AAACAAAAAAAAAP3/AAADAAEAAAAAAP7/AAADAAAAAAD/////AAACAAEAAAAAAP//AAADAAEAAAD///z/AAACAAAAAAAAAPz/AAADAAAAAAD///b/AAACAAAAAAD///f/AAACAAEAAAAAAPb/AAADAAAAAAAAAPf/AAADAAEAAAD///j/AAACAAAAAAD///n/AAACAAEAAAAAAPj/AAADAAAAAAAAAPn/AAADAAEAAAD///r/AAACAAAAAAD///v/AAACAAEAAAAAAPr/AAADAAAAAAAAAPv/AAADAAEAAAA=")
tile_set = SubResource("TileSet_4gpym")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD///3/AAACAAMAAAD///7/AAACAAIAAAAAAP3/AAADAAMAAAAAAP7/AAADAAIAAAD/////AAACAAMAAAAAAP//AAADAAMAAAD///z/AAACAAIAAAAAAPz/AAADAAIAAAD///b/AAACAAIAAAD///f/AAACAAMAAAAAAPb/AAADAAIAAAAAAPf/AAADAAMAAAD///j/AAACAAIAAAD///n/AAACAAMAAAAAAPj/AAADAAIAAAAAAPn/AAADAAMAAAD///r/AAACAAIAAAD///v/AAACAAMAAAAAAPr/AAADAAIAAAAAAPv/AAADAAMAAAA=")
tile_set = SubResource("TileSet_4gpym")

[node name="TileMapLayer3" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD///3/AAACAAUAAAD///7/AAACAAQAAAAAAP3/AAADAAUAAAAAAP7/AAADAAQAAAD/////AAACAAUAAAAAAP//AAADAAUAAAD///z/AAACAAQAAAAAAPz/AAADAAQAAAD///b/AAACAAQAAAD///f/AAACAAUAAAAAAPb/AAADAAQAAAAAAPf/AAADAAUAAAD///j/AAACAAQAAAD///n/AAACAAUAAAAAAPj/AAADAAQAAAAAAPn/AAADAAUAAAD///r/AAACAAQAAAD///v/AAACAAUAAAAAAPr/AAADAAQAAAAAAPv/AAADAAUAAAA=")
tile_set = SubResource("TileSet_4gpym")

[node name="TileMapLayer4" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD///3/AAACAAcAAAD///7/AAACAAYAAAAAAP3/AAADAAcAAAAAAP7/AAADAAYAAAD/////AAACAAcAAAAAAP//AAADAAcAAAD///z/AAACAAYAAAAAAPz/AAADAAYAAAD///b/AAACAAYAAAD///f/AAACAAcAAAAAAPb/AAADAAYAAAAAAPf/AAADAAcAAAD///j/AAACAAYAAAD///n/AAACAAcAAAAAAPj/AAADAAYAAAAAAPn/AAADAAcAAAD///r/AAACAAYAAAD///v/AAACAAcAAAAAAPr/AAADAAYAAAAAAPv/AAADAAcAAAA=")
tile_set = SubResource("TileSet_4gpym")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 7
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -80)
scale = Vector2(1, 7.915)
shape = SubResource("RectangleShape2D_4pqwy")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
